# Package_deps_FastAPI

./: .coverage  .env  .gitignore  Dockerfile  README.md  SSE.md  dev_requirements.txt  dev_uv_requirements.txt  injector.py  main.py  pyproject.toml  pytest.sh  service-start.sh  sse-client.py
.github/workflows/: build-and-test.yml  es-test.yml  es-test.yml_
tests/: conftest.py  test_api.py  test_elasticsearch.py
