[project]
name = "package-deps-fastapi"
version = "0.1.0"
description = "Package deps with uv on FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.4.22",
    "click==8.3.3",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.17.0",
    "fastapi[standard]==0.136.0",
    "fastar==0.11.0",
    "gunicorn==25.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.13",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "packaging==26.1",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.0",
    "pygments==2.20.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "ruff>=0.15.11",
    "sentry-sdk==2.58.0",
    "shellingham==1.5.4",
    "starlette==1.0.0",
    "typer==0.24.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "uvloop==0.22.1 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==1.1.1",
    "websockets==16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
